/* 
  Localizable.strings
  iOS-Template

  Created by Apple on 13/10/21.
  
*/

"iTune Music Search" = "iTune Music Search";
"Search track" = "Search track";
"Preview Song" = "Preview Song";
