...
        searchBar.placeholder = L10n.searchTrack
        searchBar.accessibilityIdentifier = "search bar"
        searchBar.accessibilityLabel = "Search song"
        
        tableView.register(UITableViewCell.self, forCellReuseIdentifier: UITableViewCell.description())
        searchBar.accessibilityIdentifier = "music list tabel"
        tableView.accessibilityLabel = "List of songs"
        
        layoutViews()
        bindViews()
    }
    
    private func layoutViews() {
...
